- fix wrapping bug on firefox linux

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -100,7 +100,6 @@ header {
     content: ">>\A------------------------------------------------------------------------------------------";
     display: block;
     margin-top: 0.4em;
-    overflow-wrap: break-word;
     white-space: pre-wrap;
   }
 
